# ferrari_karaoke

./: README.md  pyproject.toml
src/ferrari_karaoke/: __init__.py  hongyin.py  my_logging.py
src/ferrari_karaoke/config/logging/: queued-stdout-stderr-file.json
